<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.practiceitemviewmodel.TopicPracticeHeaderViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="24dp"
    android:paddingBottom="24dp">

    <TextView
      android:id="@+id/master_skills_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="88dp"
      android:fontFamily="sans-serif-medium"
      android:text="@string/topic_practice_master_these_skills"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/skills_description_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:fontFamily="sans-serif"
      android:text="@string/topic_practice_skills_description"
      android:textColor="@color/oppiaSecondaryText"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="@+id/master_skills_text_view"
      app:layout_constraintTop_toBottomOf="@+id/master_skills_text_view" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
