...
    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.TopicPracticeViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/topic_practice_skill_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="172dp"
    android:scrollbars="none"
...
