<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="isChecked"
      type="Boolean" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.practiceitemviewmodel.TopicPracticeSubtopicViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="48dp"
    app:barrierDirection="right"
    app:constraint_referenced_ids="button_example,text_view_status">

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/topic_practice_subtopic_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="subtopic_check_box" />

    <CheckBox
      android:id="@+id/subtopic_check_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="26dp"
      android:button="@drawable/selector_checkbox"
      android:checked="@{isChecked}"
      android:drawableStart="@android:color/transparent"
      android:drawablePadding="20dp"
      android:fontFamily="sans-serif"
      android:gravity="start|top"
      android:text="@{viewModel.subtopic.title}"
      android:textAlignment="viewStart"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
