...
          android:text="@{String.format(@string/topic_name, viewModel.topicNameLiveData)}"
          android:textColor="@color/white"
          android:textSize="20sp" />
      </androidx.appcompat.widget.Toolbar>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/topic_tabs_container"
        style="@style/AppTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/oppiaPrimaryDark"
...
